refactor: replace stream.collect with stream.toList in GroupServiceImpl